# sentinel

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.go  docker-compose.yml  gen.cfg.yml  gen.go  generate.go  go.mod  go.sum  handlers.go  main.go  openapi.yaml  package-lock.json  reviewstore.go  types.go  types.txt  websockets.go
asteroid_sdk/: BUILD_README.md  README.md  pyproject.toml
asteroid_sdk/src/asteroid_sdk/api/: __init__.py  sentinel_api_client_helper.py
asteroid_sdk/src/asteroid_sdk/mocking/: __init__.py  policies.py
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/: README.md  pyproject.toml
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/sentinel_api_client/: __init__.py
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/sentinel_api_client/api/api/: get_open_api.py
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/sentinel_api_client/api/project/: create_project.py  get_project.py  get_projects.py
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/sentinel_api_client/api/request_group/: create_tool_request.py  create_tool_request_group.py  get_request_group.py  get_request_group_status.py  get_run_request_groups.py  get_tool_request.py
asteroid_sdk/src/asteroid_sdk/sentinel_api_client/sentinel_api_client/models/: __init__.py  arguments.py  chain_execution.py  chain_execution_state.py  choice.py  create_project_body.py  create_run_tool_body.py  decision.py  hub_stats.py  hub_stats_review_distribution.py  message.py  message_role.py  message_type.py  output.py  project.py  review_payload.py  run.py  run_execution.py  status.py  supervision_request_state.py  supervision_result.py  supervision_status.py  supervisor_attributes.py  supervisor_chain.py  supervisor_type.py  task.py  task_state.py  task_state_metadata.py  task_state_store.py  tool.py  tool_attributes.py  tool_call.py  tool_call_arguments.py  tool_choice.py  tool_request.py  tool_request_group.py  usage.py
asteroid_sdk/src/asteroid_sdk/supervision/: common.py  config.py  decorators.py  llm_sampling.py  supervisors.py
asteroid_sdk/src/asteroid_sdk/supervision/inspect_ai/: __init__.py  _config.py  _registry.py  supervisors.py  utils.py
asteroid_sdk/src/asteroid_sdk/supervision/langchain/: logging.py  supervisors.py
asteroid_sdk/src/asteroid_sdk/utils/: utils.py
client-go/: client.go  gen.cfg.yml  generate.go  go.mod  (+1 more)
clients/sentinel_python_sdk/: .coverage  README.md  SPEC.md  pyproject.toml
clients/sentinel_python_sdk/src/sentinel/: config.py  init.py
clients/sentinel_python_sdk/src/sentinel/api/: client.py
clients/sentinel_python_sdk/src/sentinel/registration/: project.py
clients/sentinel_python_sdk/src/sentinel/wrappers/: litellm.py  openai.py
clients/sentinel_python_sdk/tests/: test_api_client.py  test_converters.py  test_error_handling.py  test_full_workflow.py
clients/sentinel_python_sdk/tests/test_wrappers/: test_openai_wrapper.py
el/: BUILD_README.md  README.md  pyproject.toml
el/src/el/: __init__.py
el/src/el/approvers/: __init__.py  _registry.py  approvers.py
el/src/el/supervision/: common.py  config.py  decorators.py
el/src/el/supervision/inspect_ai/: _config.py  _utils.py  supervisors.py
el/src/el/supervision/langchain/: logging.py  supervisors.py
el/src/el/tools/: __init__.py
el/src/el/utils/: utils.py
entropy_labs/: pyproject.toml
entropy_labs/src/entropy_labs/api/: __init__.py  _supervision.py  inspect_helpers.py  project_registration.py  sentinel_api_client_helper.py
entropy_labs/src/entropy_labs/sentinel_api_client/sentinel_api_client/models/: __init__.py  arguments.py  assistant_message.py  chain_request.py  choice.py  create_execution_body.py  create_project_body.py  create_run_tool_body.py  create_run_tool_body_attributes.py  create_supervision_result.py  create_task_body.py  error_response.py  execution.py  execution_supervisions.py  hub_stats_assigned_reviews.py  llm_explanation_request.py  llm_explanation_response.py  llm_message.py  llm_message_role.py  message.py  project.py  project_create.py  review_payload.py  run.py  run_execution.py  state_message.py  supervision.py  supervision_request.py  supervision_result.py  supervisor.py  supervisor_assignment.py  supervisor_chain.py  supervisor_type.py  task_state.py  tool.py  tool_attributes.py  tool_create.py  tool_create_attributes.py  tool_request.py  tool_request_arguments.py  (+2 more)
entropy_labs/src/entropy_labs/supervision/: __init__.py  common.py  config.py  decorators.py  supervisors.py
entropy_labs/src/entropy_labs/supervision/inspect_ai/: _utils.py  supervisors.py  utils.py
entropy_labs/src/entropy_labs/supervision/langchain/: logging.py  supervisors.py  utils.py
entropy_labs/src/entropy_labs/utils/: utils.py
(+311 files in other folders)
