[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy_labs"
version = "0.1.1"
description = "Entropy Labs' Sentinel is an agent control plane that enables efficient oversight of thousands of parallel-running agents."
authors = [
    {name = "Entropy Labs", email = "devs@entropy-labs.ai"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "inspect-ai==0.3.41",
    "requests",
    "openai",
]

[project.urls]
Homepage = "https://github.com/EntropyLabsAI/sentinel"
Repository = "https://github.com/EntropyLabsAI/sentinel.git"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["el", "el.approvers"]

[tool.setuptools.package-data]
"el" = ["py.typed", "**/*.py"]
"el.approvers" = ["**/*.py"]

[project.entry-points.inspect_ai]
entropy_labs = "el.approvers._registry"
